src/test/ui/destructuring-assignment/struct_destructure_fail.stderr
error[E0026]: struct `Struct` does not have a field named `c`
  --> $DIR/struct_destructure_fail.rs:10:20
   |
LL |     Struct { a, b, c } = Struct { a: 0, b: 1 };
   |                    ^ struct `Struct` does not have this field

error: aborting due to previous error

For more information about this error, try `rustc --explain E0026`.
